--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/ico" href="frontend/src/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Starter APP</title>
+    <title>MONSTER APP</title>
   </head>
   <body>
     <div id="root"></div>
